--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
   <title>Simple test site</title>
+  <html lang="en-us">
   <head>
     <meta name='zd-site-verification' content='rhge7uwcgpkdcyqv7sxcaw' />
   </head>
