--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <title>Simple test site</title>
   <html lang="en-us">
   <head>
+    <meta http-equiv='content-language' content='en-us' />
     <meta name='zd-site-verification' content='rhge7uwcgpkdcyqv7sxcaw' />
   </head>
   <body>
