--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
+<!DOCTYPE html>
 <html>
   <title>Simple test site</title>
-  <html lang="en-us">
   <head>
-    <meta http-equiv='content-language' content='en-us' />
     <meta name='zd-site-verification' content='rhge7uwcgpkdcyqv7sxcaw' />
   </head>
   <body>
-    <p>Hi there!</p>
-    <p>In describing to her all the grandeur of Lady Catherine and her mansion, with occasional digressions in praise of his own humble abode, and the improvements it was receiving, he was happily employed until the gentlemen joined them; and he found in Mrs. Phillips a very attentive listener, whose opinion of his consequence increased with what she heard, and who was resolving to retail it all among her neighbours as soon as she could. To the girls, who could not listen to their cousin, and who had nothing to do but to wish for an instrument, and examine their own indifferent imitations of china on the mantelpiece, the interval of waiting appeared very long. It was over at last, however. The gentlemen did approach, and when Mr. Wickham walked into the room, Elizabeth felt that she had neither been seeing him before, nor thinking of him since, with the smallest degree of unreasonable admiration. The officers of the ——shire were in general a very creditable, gentlemanlike set, and the best of them were of the present party; but Mr. Wickham was as far beyond them all in person, countenance, air, and walk, as they were superior to the broad-faced, stuffy uncle Phillips, breathing port wine, who followed them into the room.</p>
+    <p>This page contains the domain verification token and nothing else matters.</p>
+
+    <p><a href="https://nicolaepopovici.github.io/first.html">Visit a page with the html lang attribute! </a></p>
+    <p><a href="https://nicolaepopovici.github.io/second.html">Visit a page with the content-language header! </a></p>
+    <p><a href="https://nicolaepopovici.github.io/third.html">Visit a page with the content-language meta tag!</a></p>
+    <p><a href="https://nicolaepopovici.github.io/fourth.html">Visit a page with some text!</a></p>
+    <p><a href="https://nicolaepopovici.github.io/fifth.html">Visit an empty page</a></p>
+    <p><a href="https://nicolaepopovici.github.io/sixth.html">Visit a page in russian!</a></p>
+    <p><a href="https://nicolaepopovici.github.io/seventh.html">Visit a page without the title!</a></p>
   </body>
 </html>
-
