--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <title>Simple test site</title>
   <head>
-    <meta name='zd-site-verification' content='rhge7uwcgpkdcyqv7sxcaw' />
+    <meta name='zd-site-verification' content='ax3prhwn3cc8yn8ezexy46' />
   </head>
   <body>
     <p>This page contains the domain verification token and nothing else matters.</p>
