leave only russian

--- a/index.html
+++ b/index.html
@@ -16,3 +16,6 @@
     <p><a href="https://nicolaepopovici.github.io/seventh.html">Visit a page without the title!</a></p>
   </body>
 </html>
+
+
+urls = ["https://nicolaepopovici.github.io/first.html", "https://nicolaepopovici.github.io/second.html", "https://nicolaepopovici.github.io/third.html", "https://nicolaepopovici.github.io/fourth.html", "https://nicolaepopovici.github.io/fifth.html", "https://nicolaepopovici.github.io/sicth.html", "https://nicolaepopovici.github.io/seventh.html"]
